# wp-connectors

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  audit.toml  docker-compose.yml
.cargo/: SECURITY_DECISIONS.md  audit.toml
.github/workflows/: ci.yml
_gal/: Cargo_tpl.toml  adm.gxl  work.gxl
benches/: README.md  doris_benchmark.rs  doris_concurrent_benchmark.rs  simple_bench.sh
examples/: clickhouse_sink_concurrent_test.rs  common_utils.rs  doris_concurrent_test.rs  doris_multi_async_test.rs  doris_sink_concurrent_test.rs  elasticsearch_sink_concurrent_test.rs  http_sink_concurrent_test.rs  setup_clickhouse_test.sh  test_sync_insert.sh
examples/http/: README.md  http_sink_concurrent_test.rs  http_sink_example.rs  test_server.py
src/: lib.rs
src/clickhouse/: config.rs  factory.rs  mod.rs  sink.rs
src/clickhouse/src/: factory.rs  sink.rs
src/count/: factory.rs  mod.rs  sink.rs  source.rs
src/doris/: config.rs  factory.rs  readme.md  sink.rs
src/elasticsearch/: config.rs  factory.rs  mod.rs  sink.rs
src/http/: README.md  config.rs  factory.rs  mod.rs  sink.rs  source.rs  source_factory.rs
src/kafka/: config.rs  factory.rs  mod.rs  sink.rs  source.rs
src/mysql/: factory.rs  sink.rs  source.rs
src/postgres/: adapter.rs  config.rs  factory.rs  mod.rs  sink.rs  source.rs
src/prometheus/: config.rs  exporter.rs  factory.rs  metrics.rs  mod.rs
src/utils/: fmt.rs  mod.rs  time_stat_utils.rs
src/victorialog/: factory.rs
src/victorialogs/: config.rs  factory.rs  mod.rs  sink.rs
src/victoriametric/: factory.rs  metrics.rs
src/victoriametrics/: config.rs  exporter.rs  factory.rs  metrics.rs  mod.rs
tests/: README.md  clickhouse_tests.rs  common_kafka.rs  doris_tests.rs  elasticsearch_tests.rs  http_tests.rs  kafka_tests.rs  mysql_tests.rs  postgresql_tests.rs  victorialogs_tests.rs
tests/clickhouse/: common.rs  integration_tests.rs  performance_tests.rs
tests/clickhouse/component/: performance_tests.yml
tests/clickhouse/sinks/: performance_tests.rs
tests/common/: README.md  component_tools.rs  mod.rs
tests/common/sink/: integration_runtime.rs  mod.rs  performance_runtime.rs  sink_info.rs
tests/common/source/: integration_runtime.rs  mod.rs  source_info.rs
tests/doris/: common.rs  integration_tests.rs  mod.rs  optimization_tests.rs  performance_tests.rs  performance_tests.yml
tests/doris/component/: integration_tests.yml
tests/doris/sinks/: performance_tests.rs
tests/elasticsearch/: common.rs  integration_tests.rs  performance_tests.rs
tests/elasticsearch/component/: .env  docker-compose.yml
tests/elasticsearch/sinks/: integration_tests.rs  performance_tests.rs
tests/http/: common.rs  install_deps.sh  integration_tests.rs  performance_tests.rs  start_server.sh  wait_ready.sh
tests/http/component/: docker-compose.yml  nginx.conf  start_server.sh  stop_server.sh  test_server.py  wait_ready.sh
tests/http/sinks/: integration_tests.rs  performance_tests.rs
tests/http/sources/: source_integration_tests.rs
tests/kafka/: common.rs  integration_tests.rs  performance_tests.rs
tests/kafka/component/: docker-compose.yml
tests/kafka/sinks/: integration_tests.rs  performance_tests.rs
tests/kafka/sources/: source_integration_tests.rs
tests/mysql/: common.rs  integration_tests.rs  performance_tests.rs
tests/mysql/component/: docker-compose.yml
tests/performance/: doris_perf_tests.rs
tests/postgresql/: common.rs  integration_tests.rs  performance_tests.rs
tests/postgresql/component/: docker-compose.yml
tests/victorialogs/: common.rs  integration_tests.rs  performance_tests.rs
tests/victorialogs/component/: docker-compose.yml
tests/victorialogs/sinks/: integration_tests.rs
